--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,8 @@ copyright = "© 2015 Copyleft Text"
 #  facebook = "Your facebook Name" # optional
 #  gplus = "Your Google+ profile name" # optional
 #  linkedin = "Your LinkedIn Name" # optional
-  duoshuo = "alienhjy" # optional
+#  duoshuo = "alienhjy" # optional, not avaliable
+  gitment = "gileshuang" # optional
 #  headerCover = "images/headerCover.png" # optional
 #  footerCover = "images/footerCover.png" # optional
 #  googleAnalyticsUserID = "Your Analytics User Id" # optional
