update for Gitment

--- a/config.toml
+++ b/config.toml
@@ -22,6 +22,12 @@ copyright = "© 2015 Copyleft Text"
 #  footerCover = "images/footerCover.png" # optional
 #  googleAnalyticsUserID = "Your Analytics User Id" # optional
 
+[gitment]
+  owner = "gileshuang"
+  repo = "gileshuang.github.io"
+  clientid = "30408b4f6463ecaf5d87"
+  clientsecret = "a81c6cda52d080e18f7a49762f625407d50b1815"
+
 [permalinks]
 #  post = "/:year/:month/:day/:title/" # optional
   post = "/:year/:filename/" # optional
